--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,11 +107,11 @@
     }
 
     .btn-1:hover span {
-        @apply  !bg-[#ff5100]
+        @apply  !bg-[#d8c49f]
     }
 
     .btn-1:hover {
-        @apply  !border-[#ff5100]
+        @apply  !border-[#d8c49f]
     }
 
     .btn-1 span {
@@ -135,11 +135,11 @@
     }
 
     .btn-2:hover {
-        @apply text-white !bg-[#ff5100]
+        @apply text-white !bg-[#d8c49f]
     }
 
     .btn-2:hover:after {
-        @apply content-[''] border-[2px] border-solid border-[#ff5100]
+        @apply content-[''] border-[2px] border-solid border-[#d8c49f]
     }
 
     .btn-3 {
@@ -156,7 +156,7 @@
 
     .btn-3:hover svg,
     .btn-3:hover {
-        @apply text-[#ff5100] fill-[#ff5100]
+        @apply text-[#d8c49f] fill-[#d8c49f]
     }
 
     .btn-4 {
@@ -168,7 +168,7 @@
     }
 
     .btn-4:hover {
-        @apply bg-[#ff5100]
+        @apply bg-[#d8c49f]
     }
 
     .btn-5 {
@@ -184,7 +184,7 @@
     }
 
     .btn-5:hover {
-        @apply bg-[#ff5100] text-white
+        @apply bg-[#d8c49f] text-white
     }
 
     .btn-5:hover svg {
@@ -277,7 +277,7 @@
 
     .main-menu nav>ul>li.active:after,
     .main-menu nav>ul>li:after {
-        @apply content-[''] absolute w-0 right-0 bottom-0 h-[3px] bg-[#ff5100] invisible opacity-0 transition-all duration-[0.3s]
+        @apply content-[''] absolute w-0 right-0 bottom-0 h-[3px] bg-[#d8c49f] invisible opacity-0 transition-all duration-[0.3s]
     }
 
     .main-menu nav>ul>li.active::after,
@@ -286,7 +286,7 @@
     }
 
     .main-menu nav>ul>li:before {
-        @apply content-[''] absolute w-0 left-0 top-0 h-[3px] bg-[#ff5100] invisible opacity-0 transition-all duration-[0.3s]
+        @apply content-[''] absolute w-0 left-0 top-0 h-[3px] bg-[#d8c49f] invisible opacity-0 transition-all duration-[0.3s]
     }
 
     .main-menu nav>ul>li.active::before,
@@ -308,11 +308,11 @@
 
     .main-menu nav>ul>li:hover>a,
     .main-menu nav>ul>li.active>a {
-        @apply text-[#ff5100]
+        @apply text-[#d8c49f]
     }
 
     .main-menu nav>ul>li .sub-menu {
-        @apply left-0 opacity-0 absolute top-full invisible w-[220px] bg-white border-t-[3px] border-solid border-t-[#ff5100] shadow-[0_6px_12px_rgba(0,0,0,0.176)] transition-all duration-[0.4s] ease-out z-[9] origin-top scale-y-0
+        @apply left-0 opacity-0 absolute top-full invisible w-[220px] bg-white border-t-[3px] border-solid border-t-[#d8c49f] shadow-[0_6px_12px_rgba(0,0,0,0.176)] transition-all duration-[0.4s] ease-out z-[9] origin-top scale-y-0
     }
 
     .main-menu nav>ul>li:hover .sub-menu {
@@ -356,7 +356,7 @@
     }
 
     .all-testimonial .owl-nav div:hover {
-        @apply  !border-white !text-[#ff5100]
+        @apply  !border-white !text-[#d8c49f]
     }
 
     .all-testimonial .owl-nav div.owl-next {
@@ -377,7 +377,7 @@
     }
 
     .khalif-all-team-area .swiper-slide-active .team-popup-wrape .popup-team {
-        @apply bg-[#ff5100] border-white
+        @apply bg-[#d8c49f] border-white
     }
 
     .khalif-all-team-area .swiper-slide-active .team-title-desig-wrape {
@@ -405,11 +405,11 @@
     }
 
     .khalif-all-blog-list .swiper-pagination-bullet {
-        @apply inline-block h-5 w-5 rounded-[50%] border-[4px] border-solid border-[#ff5100] transition-all duration-[0.3s] bg-white my-0 mx-1 opacity-[0.5]
+        @apply inline-block h-5 w-5 rounded-[50%] border-[4px] border-solid border-[#d8c49f] transition-all duration-[0.3s] bg-white my-0 mx-1 opacity-[0.5]
     }
 
     .khalif-all-blog-list .swiper-pagination-bullet.swiper-pagination-bullet-active {
-        @apply bg-white opacity-[1] w-5 h-5 rounded-[50%] border-[4px] border-solid border-[#ff5100]
+        @apply bg-white opacity-[1] w-5 h-5 rounded-[50%] border-[4px] border-solid border-[#d8c49f]
     }
 
     .khalif-subscribe-form input[type="email"] {
@@ -429,7 +429,7 @@
     }
 
     .bgc-3 {
-        @apply  !bg-[#ff5100]
+        @apply  !bg-[#d8c49f]
     }
 
     .bgc-4 {
@@ -453,7 +453,7 @@
     }
 
     .sbgc-1 {
-        @apply  !bg-[#ff5100]
+        @apply  !bg-[#d8c49f]
     }
 
     .sbgc-2 {
@@ -552,11 +552,11 @@ h4.progress-title {
 }
 
 .khalif-counter-wrape .xl\:col-span-3:nth-child(odd) .counter-circle {
-    @apply absolute left-[47px] top-[15px] w-5 h-5 border-[4px] border-solid border-[#ff5100] bg-[#111111] rounded-[50%] -skew-x-6
+    @apply absolute left-[47px] top-[15px] w-5 h-5 border-[4px] border-solid border-[#d8c49f] bg-[#111111] rounded-[50%] -skew-x-6
 }
 
 .khalif-counter-wrape .xl\:col-span-3:nth-child(even) .counter-circle {
-    @apply absolute left-[47px] bottom-[15px] w-5 h-5 border-[4px] border-solid border-[#ff5100] bg-[#111111] rounded-[50%] -skew-x-6
+    @apply absolute left-[47px] bottom-[15px] w-5 h-5 border-[4px] border-solid border-[#d8c49f] bg-[#111111] rounded-[50%] -skew-x-6
 }
 
 .khalif-counter-wrape .xl\:col-span-3:nth-child(2) .single-count-box {
