--- a/public/css/color/color1.css
+++ b/public/css/color/color1.css
@@ -41,7 +41,7 @@ body.color-1 .khalif-offcanvas-mobile-menu-area nav>ul>li:hover>a,
 body.color-1 .khalif-offcanvas-mobile-menu-area nav>ul>li.active>a,
 body.color-1 .khalif-breadcrumb-content .breadcrumb .breadcrumb-item a,
 body.color-1 .khalif-footer-single-widget .widget_nav_menu .menu li a:hover {
-    color: #d8c49f !important;
+    color: #edb350 !important;
 }
 
 body.color-1 .ab-progress .ab-progress-bar,
@@ -80,7 +80,7 @@ body.color-1 .khalif-accordion-wrapper .card-header.btn-link,
 body.color-1 .single-sid-wdg .widget_tag_cloud .tagcloud a:hover,
 body.color-1 .khalif-all-team-area .swiper-slide-active .team-popup-wrape .popup-team,
 body.color-1 .khalif-offcanvas-mobile-menu-area nav>ul>li:hover>.sub-menu li>a:hover {
-    background: #d8c49f !important;
+    background: #edb350 !important;
 }
 
 body.color-1 .header-top-modal-btn .btn-1:hover,
@@ -103,11 +103,11 @@ body.color-1 .single-sid-wdg .widget_tag_cloud .tagcloud a:hover,
 body.color-1 .khalif-offcanvas-mobile-menu-area nav>ul>li .sub-menu,
 body.color-1 .khalif-all-blog-list .swiper-pagination-bullet,
 body.color-1 .khalif-all-blog-list .swiper-pagination-bullet.swiper-pagination-bullet-active {
-    border-color: #d8c49f !important;
+    border-color: #edb350 !important;
 }
 
 body.color-1 .single-awards-list:hover .awards-number::after {
-    border-top-color: #d8c49f;
+    border-top-color: #edb350;
 }
 
 body.color-1 .btn-3:hover svg,
@@ -116,9 +116,9 @@ body.color-1 .single-price-area:hover .price-icon svg,
 body.color-1 .single-price-area.active .price-icon svg,
 body.color-1 .single-services-wrape:hover .services-style-shape svg,
 body.color-1 .single-services-wrape:hover .single-services-icon span svg {
-    fill: #d8c49f !important;
+    fill: #edb350 !important;
 }
 
 body.color-1 .progress-wrap svg.progress-circle path {
-    stroke: #d8c49f;
+    stroke: #edb350;
 }
